--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ Ultimately, the Absolute Solver failed in its goal of eradicating the planet due
   </main>
 
   <footer>
-    <p>&copy; I will eat you ❤️</p>
+    <p>&copy; I will eat you ❤️ then love you</p>
   </footer>
 
   <script src="Kazen.js"></script>
